2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Last commit reverted.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Change the "The page was not fully loaded when the crash ocurred"
	message to something better. Patch by Thomas Presthus. Bug #433796.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix go button behaviour to react to button-release-event and not
	button-press-event. Patch by Sebastiaan Samyn. Bug #441419.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-window.c:

	Added GTK_STOCK_SELECT_ALL to SelectAll action. 

2007-06-05  Christian Persch  <chpe@gnome.org>

	* doc/reference/Makefile.am:
	
	Fix docs build on xulrunner trunk.

2007-06-05  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/about.ini:
	
	Shameless plug: added Reinout van Schouwen and myself.

2007-06-05  Jared Moore <cornflake.pirate@gmail.com>

	Reviewed by: Christian Persch <chpe@gnome.org>
	Committed by: Wouter Bolsterlee <wbolster@gnome.org>

	* data/ui/epiphany-ui.xml:

	Added 'select all' to context menu for text input areas. Bug #336739.

2007-06-04  Christian Persch  <chpe@gnome.org>

	* embed/ephy-embed.c: (ephy_embed_load_url):

	It seems SUSE can't take a hint and doesn't care, so remove this comment.

2007-05-31  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/widgets/ephy-location-entry.c:

	Adds some prefixes to web_prefixes for ftp sites. Bug #422114.

2007-05-27  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	nsIPasswordManager doesn't exist on trunk anymore.

2007-05-27  Christian Persch  <chpe@gnome.org>

	* lib/ephy-stock-icons.c: (ephy_stock_icons_init):

	No need to make this data static.

2007-05-27  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

	Take the printer's capabilities into account.

2007-05-19  Christian Persch  <chpe@gnome.org>
