@@ -8,7 +8,6 @@
 	<menuitem action="OpenInTab"/>
 	<separator/>
 	<menuitem action="Rename"/>
-	<menuitem action="Delete"/>
 	<separator/>
 	<menuitem action="ShowOnToolbar"/>
 	<menuitem action="Properties"/>
@@ -23,6 +22,8 @@
 	<menuitem action="Cut"/>
 	<menuitem action="Copy"/>
 	<menuitem action="Paste"/>
+	<menuitem action="Delete"/>
+	<separator/>
 	<menuitem action="SelectAll"/>
 </menu>
 
