@@ -6,7 +6,6 @@
         <menuitem name="FileOpenInWindow" action="OpenInWindow"/>
 	<separator name="FileSep1"/>
 	<menuitem name="FileBookmarkLink" action="BookmarkLink"/>
-	<menuitem name="FileDelete" action="Delete"/>
 	<separator name="FileSep2"/>
 	<menuitem name="FileClose" action="Close"/>
 </menu>
@@ -15,8 +14,10 @@
 	<menuitem name="EditCut" action="Cut"/>
 	<menuitem name="EditCopy" action="Copy"/>
 	<menuitem name="EditPaste" action="Paste"/>
-	<menuitem name="EditSelectAll" action="SelectAll"/>
+	<menuitem name="FileDelete" action="Delete"/>
 	<separator name="EditSep1"/>
+	<menuitem name="EditSelectAll" action="SelectAll"/>
+	<separator name="EditSep2"/>
 	<menuitem name="EditClear" action="Clear"/>
 </menu>
 
