@@ -196,9 +196,6 @@ static const GtkActionEntry ephy_bookmark_popup_entries [] = {
 	  G_CALLBACK (cmd_open_bookmarks_in_tabs) },
 	{ "Rename", NULL, N_("_Rename…"), "F2",
 	  N_("Rename the selected bookmark or topic"), G_CALLBACK (cmd_rename) },
-	{ "Delete", GTK_STOCK_DELETE, N_("_Delete"), NULL,
-	  N_("Delete the selected bookmark or topic"), 
-	  G_CALLBACK (cmd_delete) },
 	{ "Properties", GTK_STOCK_PROPERTIES, N_("_Properties"), "<alt>Return",
 	  N_("View or modify the properties of the selected bookmark"), 
 	  G_CALLBACK (cmd_bookmark_properties) },
@@ -222,6 +219,9 @@ static const GtkActionEntry ephy_bookmark_popup_entries [] = {
 	{ "Paste", GTK_STOCK_PASTE, N_("_Paste"), "<control>V",
 	  N_("Paste the clipboard"), 
 	  G_CALLBACK (cmd_paste) },
+	{ "Delete", GTK_STOCK_DELETE, N_("_Delete"), "<control>T",
+	  N_("Delete the selected bookmark or topic"), 
+	  G_CALLBACK (cmd_delete) },
 	{ "SelectAll", NULL, N_("Select _All"), "<control>A",
 	  N_("Select all bookmarks or text"), 
 	  G_CALLBACK (cmd_select_all) },
