@@ -175,9 +175,6 @@ static const GtkActionEntry ephy_history_ui_entries [] = {
 	{ "OpenInTab", STOCK_NEW_TAB, N_("Open in New _Tab"), "<shift><control>O",
 	  N_("Open the selected history link in a new tab"),
 	  G_CALLBACK (cmd_open_bookmarks_in_tabs) },
-	{ "Delete", GTK_STOCK_DELETE, N_("_Delete"), NULL,
-	  N_("Delete the selected history link"),
-	  G_CALLBACK (cmd_delete) },
 	{ "BookmarkLink", STOCK_ADD_BOOKMARK, N_("Add _Bookmark…"), "<control>D",
 	  N_("Bookmark the selected history link"),
 	  G_CALLBACK (cmd_bookmark_link) },
@@ -195,6 +192,9 @@ static const GtkActionEntry ephy_history_ui_entries [] = {
 	{ "Paste", GTK_STOCK_PASTE, N_("_Paste"), "<control>V",
 	  N_("Paste the clipboard"),
 	  G_CALLBACK (cmd_paste) },
+	{ "Delete", GTK_STOCK_DELETE, N_("_Delete"), "<control>T",
+	  N_("Delete the selected history link"),
+	  G_CALLBACK (cmd_delete) },
 	{ "SelectAll", NULL, N_("Select _All"), "<control>A",
 	  N_("Select all history links or text"),
 	  G_CALLBACK (cmd_select_all) },
