@@ -1,5 +1,15 @@
 2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>
 
+	* src/ephy-history-window.c
+	* src/bookmarks/ephy-bookmarks-editor.c
+	* data/ui/epiphany-history-window-ui.xml
+	* data/ui/epiphany-bookmark-editor-ui.xml:
+
+	Assign control+T as default delete shortcut. Also move the Delete item
+	to Edit menu. Bug #351100.
+
+2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>
+
 	* embed/mozilla/EphyAboutModule.cpp:
 
 	Last commit reverted.
